fixing the login ui overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,7 @@
 *::before {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -31,7 +32,7 @@ a:hover {
 }
 
 body {
-  min-width: 100vh;
+  overflow-x: hidden;
 }
 
 button {
